# Programming

./: README.md  test.ipynb
OOP/: .gitignore  test.ipynb
OOP/lab_1/: README.md  my_first_app.ipynb
OOP/lab_2/: Lecture.ipynb  Python_programming_basics.ipynb  test.json
OOP/lab_3/: README.md  game.py
OOP/lab_5/: README.md  class_work.ipynb
OOP/lab_6/: README.md  app.py  season.py
OOP/lab_6/1_venv/: requirements.txt
OOP/lab_6/2_pipenv/: Pipfile
OOP/lab_6/3_poetry/: pyproject.toml
OOP/lab_7/: README.md  pyproject.toml
Web-tech/: lab 5_1.html  lab 5_2.html
Web-tech/lab 10/: lab 10_1.html  lab 10_2.html  Резюме.html
Web-tech/lab 11/: lab 11_1.html  lab 11_2.html  lab 11_3.html  lab 11_4.html  style_1.css  style_2.css  style_3.css  style_4.css
Web-tech/lab 12/: main.html  style.css  Контакти.html  Про нас.html  Продукти.html
Web-tech/lab 14/: demo.js  index.html
Web-tech/lab 15/: demo.js  index.html  style.css
Web-tech/lab 17/: demo.html  demo.js  demo_1.html  demo_1.js  style.css
Web-tech/lab 5/: lab 5_1.html  lab 5_2.html
Web-tech/lab 6/: base-page.html
Web-tech/lab 7/: index.html  style.css
Web-tech/lab 7 i lab 8/: basic-page.html  index.html  style.css
Web-tech/lab 9/: basic.html  style.css
Web-tech/Курсова робота/: demo.js  main.html  style.css  Про нас.html  Сторінка акцій.html  Сторінка кошика і оплати.html  Умови використання сайту.html
lab_1/: README.md  my_first_app.ipynb
lab_2/: README.md
lab_3/: README.md  class.py  classes.ipynb  note.ipynb
lab_4/: README.md
lab_5/: README.md  class_work.ipynb  paradigm.ipynb
(+28 files in other folders)
