[project]
name = "3-poetry"
version = "2.3.0"
description = ""
authors = [
    {name = "Nazar175",email = "nhuchko2023@itcollege.lviv.ua"}
]
requires-python = ">=3.13"
dependencies = [
    "jikanpy-v4 (>=1.0.2,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
